# BagTracker

./: README.md
BagTracker/: manage.py
BugTracker/: manage.py  pyproject.toml  requirements.txt
BugTracker/BugTracker/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
BugTracker/TestBugTracker/: manage.py
BugTracker/authorization/: models.py  urls.py  views.py
BugTracker/htmlcov/: class_index.html  d_5caf520a5ad64cff___init___py.html  d_5caf520a5ad64cff_admin_py.html  d_5caf520a5ad64cff_apps_py.html  d_5caf520a5ad64cff_models_py.html  d_5caf520a5ad64cff_serializers_py.html  d_5caf520a5ad64cff_tests_py.html  d_5caf520a5ad64cff_urls_py.html  d_5caf520a5ad64cff_views_py.html  d_61b35995013bde1d_0001_initial_py.html  d_61b35995013bde1d_0002_alter_execution_user_alter_task_creator_and_more_py.html  d_61b35995013bde1d_0003_dependency_py.html  d_61b35995013bde1d_0004_subtasks_py.html  d_61b35995013bde1d_0005_tasktype_py.html  d_61b35995013bde1d_0006_alter_task_type_py.html  d_61b35995013bde1d_0007_alter_task_priority_py.html  d_61b35995013bde1d___init___py.html  function_index.html  index.html  status.json  z_5caf520a5ad64cff___init___py.html  z_5caf520a5ad64cff_admin_py.html  z_5caf520a5ad64cff_apps_py.html  z_5caf520a5ad64cff_models_py.html  z_5caf520a5ad64cff_serializers_py.html  z_5caf520a5ad64cff_tests_py.html  z_5caf520a5ad64cff_urls_py.html  z_5caf520a5ad64cff_views_py.html  z_61b35995013bde1d_0001_initial_py.html  z_61b35995013bde1d_0002_status_task_tasktype_taskhistory_task_type_subtasks_and_more_py.html  z_61b35995013bde1d_0003_delete_subtasks_py.html  (+6 more)
(+34 files in other folders)
