[tool.poetry]
name = "bugtracker"
version = "0.1.0"
description = "django task tracker project"
authors = ["Lizazavr <78729103+Lizazavr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.2.16"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
djangorestframework-swagger = "0.2.2"
drf-spectacular = "0.27.2"
drf-yasg = "1.21.7"
coverage = "^7.6.1"
psycopg2-binary = "^2.9.9"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
